<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/caution"
        android:layout_width="274dp"
        android:layout_height="229dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result"
        app:srcCompat="@drawable/ic_alot" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toTopOf="@+id/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth"
        app:layout_constraintVertical_bias="0.962"
        app:srcCompat="@mipmap/radonicon" />

    <ImageButton
        android:id="@+id/radbutton"
        android:layout_width="167dp"
        android:layout_height="154dp"
        android:layout_marginTop="3dp"
        android:backgroundTint="@color/gray"
        android:contentDescription="@string/desc"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth"
        app:layout_constraintVertical_bias="0.957"
        app:srcCompat="@mipmap/radonicon" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/result"
        android:textSize="40sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listtext"
        app:layout_constraintVertical_bias="0.209" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.99" />

    <Button
        android:id="@+id/button"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:backgroundTint="@color/button"
        android:textSize="30sp"
        android:text="@string/button"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth"
        app:layout_constraintVertical_bias="0.893" />


    <TextView
        android:id="@+id/bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:text="@string/bluetooth"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/listtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_alternates_bold"
        android:textSize="15sp"
        android:text="@string/list"
        android:visibility="visible"
        android:layout_marginTop="7sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bluetooth"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/listlayout"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">


        <ListView
            android:id="@+id/lv_bt_device"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>